# coffeedesk-crawler

./: .gitignore  Dockerfile  Makefile  build_docker.sh  coffee.json  docker-compose.yml  pyproject.toml
coffeedesk/: __main__.py  coffee.py
coffeedesk/fetch/: cofee_fetcher.py
coffeedesk/filters/: parser.py  request.py
experiments/: exp.ipynb  index.html
