[tool.poetry]
name = "coffeedesk-crawler"
version = "0.1.0"
description = ""
authors = ["Sergey Ivanychev <sergeyivanychev@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
beautifulsoup4 = "^4.11.1"
httpx = "^0.23.1"
furl = "^2.1.3"
cytoolz = "^0.12.1"
typing-extensions = "^4.4.0"
lxml = "^4.9.2"
html5lib = "^1.1"
loguru = "^0.6.0"
click = "^8.1.3"
python-telegram-bot = "~13"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
black = "^22.12.0"
pycln = "^2.1.2"
isort = "^5.11.4"
pyupgrade = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
